cd/argo/depoyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fortune-app
  template:
    metadata:
      name: fortune-app
      labels:
        app: fortune-app
      annotations:
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
        prometheus.io/scrape: 'true'  
    spec:
      containers:
      - image: harbor.mgmt.tanzu.zwickey.net/library/fortune-demo:latest
        name: fortune-app
        ports:
        - containerPort: 8080
          protocol: TCP
