cd/argo/app.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fortune-service
  labels:
    app: fortune-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: boot
  selector:
    app: fortune-app
  type: ClusterIP
  selector:
    app: fortune-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fortune-app
  template:
    metadata:
      name: fortune-app
      labels:
        app: fortune-app
      annotations:
        prometheus.io/path: '/actuator/prometheus'
        prometheus.io/port: '8080'
        prometheus.io/scrape: 'true'  
    spec:
      containers:
      - image: harbor.mgmt.tanzu.private.cloud.zwickey.net/library/fortune-demo:latest
        name: fortune-app
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: fortune-ingress
 annotations:
   cert-manager.io/cluster-issuer: contour-selfsigned-cluster-issuer
spec:
 rules:
 - host: fortune.mgmt.tanzu.private.cloud.zwickey.net
   http:
     paths:
     - backend:
         serviceName: fortune-service
         servicePort: 80
 tls:
 - hosts:
   - fortune.mgmt.tanzu.private.cloud.zwickey.net
   secretName: ingress-tls
